Fixing minor styling issues on mobile

--- a/src/components/playlist-tile/playlist-tile.scss
+++ b/src/components/playlist-tile/playlist-tile.scss
@@ -87,11 +87,11 @@ playlist-tile {
 		width: auto;
 		height: $playlist-tile-height--horizontal;
 		float: left;
-
-		.xs & {
-			height: 50vw;
-		}
     }
+
+	.xs & {
+		height: 50vw;
+	}
 }
 
 .playlist-tile-meta {
@@ -206,6 +206,7 @@ playlist-tile {
 	height: $distance-md;
 	overflow: hidden;
 	max-height: 200px;
+	word-break: break-word;
 	transition: height .2s ease;
 
 	.xs & {
